margin overflow bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body{
     margin: 0px auto;
     font-family: ProximaNova;
 }
+html, body, main {
+    width: 100%;
+    overflow-x: hidden;
+}
 
 @font-face {
     font-family: ProximaNova;
@@ -231,6 +235,7 @@ ul li:nth-child(1){
     .testimonies h3 {
         padding: 1em 0;
     }
+
 
 }
 
